add API templates, and auth
