# app/Models/Template.php
@@ -6,5 +6,6 @@ use Illuminate\Database\Eloquent\Model;
 
 class Template extends Model {
     use HasFactory;
-    protected $fillable = ['title', 'desc', 'file', 'type', 'price', 'flag_active'];
+    protected $fillable = ['title', 'description', 'type', 'file_path', 'price'];
+
 }
