# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AdminAuthController;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\TemplateController;
 use App\Http\Controllers\UndanganController;
@@ -10,7 +11,14 @@ Route::post('/register', [AuthController::class, 'register']);
 Route::post('/login', [AuthController::class, 'login']);
 
 Route::middleware('auth:sanctum')->post('/logout', [AuthController::class, 'logout']);
+
+Route::middleware(['auth:sanctum'])->group(function () {
+    Route::post('/templates', [TemplateController::class, 'store']);
+});
+
+
 Route::get('/templates', [TemplateController::class, 'index']);
+Route::get('/templates/{id}', [TemplateController::class, 'show']);
 
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
@@ -22,3 +30,8 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('/my-undangan', [UndanganController::class, 'userUndangan']);
     Route::post('/undangan', [UndanganController::class, 'store']);
 });
+
+
+Route::post('/admin/register', [AdminAuthController::class, 'register']);
+Route::post('/admin/login', [AdminAuthController::class, 'login']);
+Route::middleware('auth:sanctum')->post('/admin/logout', [AdminAuthController::class, 'logout']);
